tied necessary node to id_user
