# handler/konsulenHandler.go
@@ -36,13 +36,13 @@ func GetAllKonsulen(c *fiber.Ctx) error {
 
 // User godoc
 // @Security ApiKeyAuth
-// @Summary get konsulen.
-// @Description get konsulen by id.
+// @Summary get Konsulen.
+// @Description get Konsulen by id.
 // @Tags Konsulen
 // @Produce json
 // @Success 200 {object} response.Response
-// @Param id_konsulen path int64 true "ID Konsulen"
-// @Router /api/konsulen/get/{id_konsulen} [get]
+// @Param id_user path int64 true "ID User"
+// @Router /api/konsulen/get/{id_user} [get]
 func GetKonsulen(c *fiber.Ctx) error {
 	resp := new(response.Response)
 	resp.Status = static.StatusError
@@ -57,7 +57,7 @@ func GetKonsulen(c *fiber.Ctx) error {
 	konsulen := new(entity.Konsulen)
 	db := database.DB
 
-	if err := db.Where("id = ?", id).Find(&konsulen).Error; err != nil {
+	if db.Where("id_user = ?", id).Find(&konsulen).RowsAffected != 1 {
 		resp.Message = "Konsulen not Found"
 		return c.Status(fiber.StatusOK).JSON(resp)
 	}
@@ -121,5 +121,54 @@ func CreateKonsulen(c *fiber.Ctx) error {
 	resp.Status = static.StatusSuccess
 	resp.Message = "Konsulen successfully Created"
 	resp.Data = newKonsulen
+	return c.Status(fiber.StatusOK).JSON(resp)
+}
+
+// @User godoc
+// @Security ApiKeyAuth
+// @Summary update Konsulen.
+// @Description update Konsulen by id.
+// @Tags Konsulen
+// @Produce json
+// @Success 200 {object} response.Response
+// @param body body request.UpdateKonsulenRequest true "body"
+// @Param id_user path int64 true "User ID"
+// @Router /api/konsulen/update/{id_user} [put]
+func UpdateKonsulen(c *fiber.Ctx) error {
+	resp := new(response.Response)
+	resp.Status = static.StatusError
+	resp.Data = nil
+
+	id, err := strconv.Atoi(c.AllParams()["id"])
+	if err != nil || id < 1 {
+		resp.Message = "ID is Not Valid"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	updateKonsulen := new(request.UpdateKonsulenRequest)
+	if err := c.BodyParser(&updateKonsulen); err != nil {
+		resp.Message = "Review your input"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	db := database.DB
+	konsulen := new(entity.Konsulen)
+
+	if err := db.Where("id_user = ?", id).First(&konsulen).Error; err != nil {
+		resp.Message = "Konsulen not Found"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	konsulen.Name = updateKonsulen.Name
+	konsulen.Spesialis = updateKonsulen.Spesialis
+
+	if err := db.Save(&konsulen).Error; err != nil {
+		resp.Message = "Duplicate Data Found"
+		return c.Status(fiber.StatusOK).JSON(resp)
+	}
+
+	resp.Status = static.StatusSuccess
+	resp.Message = "User successfully Updated"
+	resp.Data = konsulen
 	return c.Status(fiber.StatusOK).JSON(resp)
 }
